Updated cycle case rollup to position case filters nicely.  Also fixed case filter css rule so that the list pulls up when a case is hidden (switched to display instead of visibility).

--- a/pocket_change/pocket_change/static/cycle_case_rollup.css
+++ b/pocket_change/pocket_change/static/cycle_case_rollup.css
@@ -87,19 +87,90 @@ div.cycle div.jira_issue div
 	height:20px;
 	font-weight:bold;
 }
-ul.case_rollup
+div.case_rollup_container
 {
 	position:absolute;
-	top:100;
+	top:105;
+	left:20;
+	width:980px;
+}
+div.case_filters
+{
+	position:relative;
+	background-color:#D8D8D8;
+}
+div.case_filters div.spacer
+{
+	height:10px;
+}
+div.case_filters div div.label
+{
+	position:relative;
+	left:10;
+	width:100;
+	height:20;
+	font:15px verdana;
+	font-weight:bold;
+	text-align:right;
+	margin-right:0px;
+}
+div.case_filters ul.filter_list
+{
+	position:relative;
+	top:-20;
+	left:120;
+	width:870;
+}
+ul.filter_list li
+{
+	position:absolute;
+	width:200;
+	height:20;
+	padding:2;
+	text-align:center;
+}
+ul.filter_list li[column='0']
+{
 	left:0;
-	width:1000px;
+}
+ul.filter_list li[column='1']
+{
+	left:210;
+}
+ul.filter_list li[column='2']
+{
+	left:420;
+}
+ul.filter_list li[column='3']
+{
+	left:630;
+}
+ul.filter_list li[row='0']
+{
+	top:0;
+}
+ul.filter_list li[row='1']
+{
+	top:30;
+}
+ul.filter_list li[row='2']
+{
+	top:50;
+}
+ul.filter_list li[row='3']
+{
+	top:70;
+}
+ul.case_rollup
+{
+	position:relative;
+	top:10;
+	left:0;
+	width:980px;
 	list-style-type:none;
 }
 ul.case_rollup li.case
 {
-	position:relative;
-	left:20;
-	width:980px;
 	background-color:#D8D8D8;
 }
 li.case div.header
@@ -243,5 +314,5 @@ li.execution div.last_log_message
 }
 .case_rollup li.case[filtered=y]
 {
-	visibility:hidden;
+	display:none;
 }
